src/test/resources/public/input/typechecking/fail/my_test_cases/my_fail50.jova
class Test{

}
class Main {

  public int main() {
    int i;
    int a;
    i = 0;
    a = i == 1 ? 10 * 5 : 20 * 10;
    a = i == 1 ? "Text" : 20 * 10;
    return 0;
    }
}

